# dino-terminal

./: .gitleaks.toml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  personas.json  vite.config.ts
.github/workflows/: ci.yml  prepare-release.yml  release.yml  secrets-scan.yml
docs/: document-shell-spec.md  rich-agent-stream-json.md  stream-json-tool-events.md
docs/samples/: rich-agent-ui-mock.html
scripts/: build-latest-json.sh  bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  npx.rs  personas.rs  pty_manager.rs  session.rs  status.rs  stream_session.rs
src/components/: AgentFeed.tsx  AgentViewModeSwitch.test.tsx  AgentViewModeSwitch.tsx  CommandPalette.tsx  DocumentTabBar.tsx  DocumentViewer.tsx  FileTree.tsx  LinkifiedText.tsx  PermissionPolicyBar.tsx  PersonaTabs.tsx  ResizablePanels.tsx  RichAgentDock.tsx  RichAgentPane.tsx  ShortcutsHelp.tsx  Sidebar.tsx  SpawnErrorBanner.tsx  StatusBar.tsx  TaskPanel.tsx  TerminalPane.tsx  TitleBar.tsx  ToolRunCard.tsx  UpdateBanner.tsx
src/hooks/: useClaudeStreamSession.ts  useFileTree.ts  usePersonas.ts  useStatusLine.ts  useTasks.test.ts  useTasks.ts  useTerminal.ts  useUpdateAvailability.ts
src/lib/: app-updater.ts  appearance.test.ts  appearance.ts  coalesce-assistant.test.ts  coalesce-assistant.ts  format-duration.test.ts  format-duration.ts  open-external-url.ts  personas.test.ts  personas.ts  safe-http-url.test.ts  safe-http-url.ts  storage-keys.test.ts  (+11 more)
(+2 files in other folders)
