[package]
name = "dino-terminal"
version = "0.2.3"
description = "Dino Terminal — PTY-backed Claude Code wrapper"
authors = ["Dino"]
edition = "2021"

[lib]
name = "dino_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
base64 = { version = "0.22", features = ["alloc"] }
log = "0.4"
env_logger = "0.11"
regex = "1"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
